12.15.0 (05-12-2025)
- Refactor: Move and replace ITreasuryBridgeAPI#getAllAcademicTreasuryEventsList to AcademicTreasuryEvent [#qubIT-Fenix-6552]

12.14.0 (04-12-2025)
- Refactor: Move and replace ITreasuryBridgeAPI#createSaftDefaultPhysicalAddress to PersonCustomer [#qubIT-Fenix-6552]

12.13.1 (26-11-2025)
- Refactor: Move some properties and methods from ITreasuryBridgeAPI [#qubIT-Fenix-6552]

12.13.0 (25-11-2025)
- Refactor: Change static variable SPREADHSEET_HEADERS of the various report beans, to not evaluate when the classes are loaded [#qubIT-Fenix-7789]

12.12.0 (15-11-2025)
- Refactor: Unit tests to test credit over exemption splitting [#qubIT-Fenix-7637]
- Refactor: Declare enum for different type of enrolments [#qubIT-Fenix-7573]
- Refactor: Add plugin in pom to create module jar for tests [#qubIT-Fenix-7573]
- Improvement: Add active student curricular plan for the execution year of debts for reports [#qubIT-Fenix-7765]

12.11.0 (15-10-2025)
- Refactor: Method to reorder tuition payment plan installments, based by product installment order property [#qubIT-Fenix-7626]

12.10.0 (12-09-2025)
- Bug Fix: Fix the recalculation of registration tuition installments [#qubIT-Fenix-7442]
- Refactor: Partition the RegistrationTuitionService into smaller classes [#qubIT-Fenix-7442]
- Refactor: Unit tests to cover most as possible, the variations with the recalculation of registration tuition installments [#qubIT-Fenix-7442]

12.9.9 (08-09-2025)
- Bug Fix: Resolve some interest debts associated with standalone, extracurricular and improvement tuition present degree information [#qubIT-Fenix-7443]

12.9.8 (26-08-2025)
- Refactor: Transform static method into instance method to copy academic debt rule between periods [#qubIT-Fenix-7423]
- Bug Fix: Copy the start and end dates of academic debt rule execution [#qubIT-Fenix-7423]

12.9.7 (26-08-2025)
- Refactor: Implement treasury service method to check if dynamic message is defined [#qubIT-Fenix-7405]