@@ -1,3 +1,6 @@
+- Refactor: Remove methods from ITreasuryBridgeAPI implementation [#qubIT-Fenix-6552]
+- Refactor: Declare static method in PersonCustomer to create customer if missing [#qubIT-Fenix-6552]
+
 12.15.0 (05-12-2025)
 - Refactor: Move and replace ITreasuryBridgeAPI#getAllAcademicTreasuryEventsList to AcademicTreasuryEvent [#qubIT-Fenix-6552]
 
